# VectorDB-

./: Cargo.toml  Dockerfile  PORTFOLIO.md  README.md  benchmark_models.sh  demo.sh  docker-compose.yml  embedding.json  query_vector.json  test_benchmark.sh  test_embedding.sh  test_embedding_service.sh  test_persistence.sh  test_search.sh
data/: index.json
python/: embedding.py
python/embedding_service/: Dockerfile  README.md  api_keys.py  auth.py  benchmark.py  client.py  config.py  docker-compose.yml  env.template  main.py  model_config.json  models.py  monitoring.py  provider_keys.enc  requirements.txt  scaling.py  test_client.py  test_service.py  users.json  vector_store.py
python/embedding_service/data/vectors/: vector_metadata.db
python/embedding_service/data/vectors/test_collection/: vectors.npy
python/embedding_service/prometheus/: alerts.yml  prometheus.yml
scripts/: test_multi_model.rs
src/: main.rs
src/api/: benchmark.rs  mod.rs
src/db/: mod.rs  persistence.rs
src/embedding/: mod.rs
src/utils/: benchmark.rs  mod.rs
web/dashboard/: Dockerfile  index.html  package-lock.json  package.json
web/dashboard/src/: App.tsx
web/dashboard/src/components/: Header.tsx  Layout.tsx  Sidebar.tsx
web/dashboard/src/pages/: Collections.tsx  Dashboard.tsx  Login.tsx  Models.tsx  Playground.tsx
web/dashboard/src/services/: api.ts
web/dashboard/src/types/: index.ts
