[package]
name = "vectron"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.36.0", features = ["full"] }

# Web framework
axum = { version = "0.7.4", features = ["macros"] }

# Serialization & Deserialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
env_logger = "0.10.1"

# Configuration
dotenv = "0.15.0"

# Error handling
anyhow = "1.0.80"
thiserror = "1.0.57"

# Utilities
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["cors", "trace"] }
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }

[[bin]]
name = "test_multi_model"
path = "scripts/test_multi_model.rs"
